<resources>
    <string name="app_name">TETRIS</string>
    <string name="novo_jogo">Novo Jogo</string>
    <string name="configurar">Configurar</string>
    <string name="continuar">Continuar</string>
    <string name="sair">Sair</string>
    <string name="cancelar">Cancelar</string>
    <string name="salvar">Salvar</string>
    <string name="dificuldade">Dificuldade</string>
    <string name="quantidade">Quantidade de peças</string>
    <string name="facil">Fácil</string>
    <string name="medio">Médio</string>
    <string name="dificil">Difícil</string>
    <string name="_6">6</string>
    <string name="_4">4</string>
    <string name="_3">3</string>
    <string name="pontuacao">Pontuação</string>
    <string name="record">Record</string>
</resources>